# cmus-status-line

./: Cargo.toml  README.md  config.toml
src/: action.rs  app.rs  args.rs  error.rs  lib.rs  main.rs  meta.rs
src/args/: commands.rs  mod.rs  options.rs
src/cmus_status/: data.rs  mod.rs  status.rs
src/cmus_status/data/: mod.rs  playback_status.rs  time.rs
src/cmus_status/output/: builder.rs  format.rs  mod.rs
src/cmus_status/output/format/: format_expression.rs  format_part.rs  mod.rs
src/cmus_status/status/: builder.rs  format.rs  mod.rs  settings.rs
src/config/: mod.rs  output_config.rs
