[package]
name        = "cmus-status-line"
version     = "1.0.1"
authors     = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition     = "2018"
description = "Prints cmus playback information in a configurable format to stdout"
repository  = "https://github.com/Noah2610/cmus-status-line"
homepage    = "https://github.com/Noah2610/cmus-status-line"
readme      = "README.md"
license     = "MIT"
keywords    = ["cmus", "music", "status"]
categories  = ["command-line-utilities"]

[dependencies]
dirs       = "2.0.2"
htmlescape = "0.3.1"
regex      = "1.3.1"
ron        = "0.5.1"
serde      = { version = "1.0.102", features = ["derive"] }
toml       = "0.5.5"
